[tool.poetry]
name = "markov-ben-yehuda"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.3.5"
numpy = "^1.22.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
